# vpn-sync

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/notify/: base.py  factory.py  telegram.py
src/rpc/: client_test.py  ping.proto  server.py
src/sync/: client.py  main.py  router.py  scheduler.py  service.py
src/vpn_sync/: main.py  pinger.py  scheduler.py
